samples/_failures_safe/1761198121_ba9ab6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd995838.c: In function ‘main’:
./samples/SAFE/__tmp_dd995838.c:143:24: error: expected ‘)’ at end of input
  143 |     if (compressed_size
      |        ~               ^
      |                        )
./samples/SAFE/__tmp_dd995838.c:143:5: error: expected declaration or statement at end of input
  143 |     if (compressed_size
      |     ^~
